# local-secure-rag-prod

./: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.yml  topics.co
data/: sample.txt
policies/: document_policy.yaml
src/: app.py  bm25_corpus.json  build_bm25.py  debug_rag.py  guard_llamaguard.py  hybrid_retriever.py  index_documents.py  pii_filter.py  prefilter.py  qdrant_setup.py  reindex.py  semantic_cache.py  semantic_chunker.py
