[project]
name = "local-secure-rag-prod"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "langchain>=0.2.16",
  "langchain-community>=0.2.16",
  "langchain-ollama>=1.0.0",
  "qdrant-client>=1.10.0",
  "rank-bm25>=0.2.2",
  "redis>=5",
  "sentence-transformers>=3",
  "presidio-analyzer>=2.2.355",
  "presidio-anonymizer>=2.2.355",
  "requests>=2",
  "cerbos>=0.8.0",
  "tiktoken>=0.7.0"
]
[dependency-groups]
guardrails = [ "nemoguardrails" ]
